--- a/Apache HTTPD/httpd.conf
+++ b/Apache HTTPD/httpd.conf
@@ -1,6 +1,5 @@
 # Register as windows service
-# better http -install as Windows Service 
-# Good reference :https://dic.vbird.tw/linux_server2/point06.php 
+# sc.exe create Apache24 binPath=C:\Apache24\bin\httpd.exe
 
 # define a variable, to be accessed by ${VAR_NAME}
 Define SRVROOT "c:/Apache24"
@@ -10,7 +9,6 @@ ServerRoot "${SRVROOT}"
 
 # Consider your machine has multiple Network Interface and you just only bind to single interface
 #Listen 12.34.56.78:10043
-# for this , bind to all interface
 Listen 10043
 
 AcceptFilter http none
@@ -104,7 +102,7 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule remoteip_module modules/mod_remoteip.so
 #LoadModule request_module modules/mod_request.so
 #LoadModule reqtimeout_module modules/mod_reqtimeout.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 #LoadModule sed_module modules/mod_sed.so
 #LoadModule session_module modules/mod_session.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
@@ -121,7 +119,8 @@ LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule ssl_module modules/mod_ssl.so
 #LoadModule status_module modules/mod_status.so
 #LoadModule substitute_module modules/mod_substitute.so
-#LoadModule unique_id_module modules/mod_unique_id.so
+LoadModule unique_id_module modules/mod_unique_id.so
+LoadModule security2_module modules/mod_security2.so
 #LoadModule userdir_module modules/mod_userdir.so
 #LoadModule usertrack_module modules/mod_usertrack.so
 #LoadModule version_module modules/mod_version.so
@@ -213,11 +212,12 @@ DocumentRoot "${SRVROOT}/htdocs"
 
 
 #ErrorLog "logs/error.log"
-ErrorLog "|${SRVROOT}/bin/rotatelogs.exe ${SRVROOT}/logs/error-%Y-%m-%d.log 86400"
+ErrorLog "|${SRVROOT}/bin/rotatelogs.exe ${SRVROOT}/logs/error-%Y-%m-%d.log 86400 365"
 
 # LogLevel: Control the number of messages logged to the error_log.
 # Possible values include: debug, info, notice, warn, error, crit,alert, emerg.
-LogLevel warn
+#LogLevel debug
+LogLevel alert rewrite:trace6
 
 <IfModule log_config_module>
     #
@@ -232,12 +232,53 @@ LogLevel warn
       LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
     </IfModule>
 
-   
+    #
+    # The location and format of the access logfile (Common Logfile Format).
+    # If you do not define any access logfiles within a <VirtualHost>
+    # container, they will be logged here.  Contrariwise, if you *do*
+    # define per-<VirtualHost> access logfiles, transactions will be
+    # logged therein and *not* in this file.
+    #
     #CustomLog "logs/access.log" common
-	# combined is the above logformat
+	
 	CustomLog "|${SRVROOT}/bin/rotatelogs.exe ${SRVROOT}/logs/access-%Y-%m-%d.log 86400" combined
 
- 
+    #
+    # If you prefer a logfile with access, agent, and referer information
+    # (Combined Logfile Format) you can use the following directive.
+    #
+    #CustomLog "logs/access.log" combined
+</IfModule>
+
+<IfModule alias_module>
+    #
+    # Redirect: Allows you to tell clients about documents that used to 
+    # exist in your server's namespace, but do not anymore. The client 
+    # will make a new request for the document at its new location.
+    # Example:
+    # Redirect permanent /foo http://www.example.com/bar
+
+    #
+    # Alias: Maps web paths into filesystem paths and is used to
+    # access content that does not live under the DocumentRoot.
+    # Example:
+    # Alias /webpath /full/filesystem/path
+    #
+    # If you include a trailing / on /webpath then the server will
+    # require it to be present in the URL.  You will also likely
+    # need to provide a <Directory> section to allow access to
+    # the filesystem path.
+
+    #
+    # ScriptAlias: This controls which directories contain server scripts. 
+    # ScriptAliases are essentially the same as Aliases, except that
+    # documents in the target directory are treated as applications and
+    # run by the server when requested rather than as documents sent to the
+    # client.  The same rules about trailing "/" apply to ScriptAlias
+    # directives as to Alias.
+    #
+    ScriptAlias /cgi-bin/ "${SRVROOT}/cgi-bin/"
+
 </IfModule>
 
 
@@ -260,8 +301,44 @@ LogLevel warn
     RequestHeader unset Proxy early
 </IfModule>
 
+<IfModule mime_module>
+    #
+    # TypesConfig points to the file containing the list of mappings from
+    # filename extension to MIME-type.
+    #
+    TypesConfig conf/mime.types
 
-# Can Include others conf files, now for learning purpose , just keep 1 
+    AddType application/x-compress .Z
+    AddType application/x-gzip .gz .tgz
+
+</IfModule>
+
+
+
+#
+# Customizable error responses come in three flavors:
+# 1) plain text 2) local redirects 3) external redirects
+#
+# Some examples:
+#ErrorDocument 500 "The server made a boo boo."
+#ErrorDocument 404 /missing.html
+#ErrorDocument 404 "/cgi-bin/missing_handler.pl"
+#ErrorDocument 402 http://www.example.com/subscription_info.html
+#
+
+#
+# MaxRanges: Maximum number of Ranges in a request before
+# returning the entire resource, or one of the special
+# values 'default', 'none' or 'unlimited'.
+# Default setting is to accept 200 Ranges.
+#MaxRanges unlimited
+
+
+# can include others
+#Include conf/extra/httpd-default.conf
+
+
+# Secure (SSL/TLS) connections
 #Include conf/extra/httpd-ssl.conf
 #
 # Note: The following must must be present to support
@@ -273,16 +350,44 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+SecRuleEngine On
+SecAuditLog "${SRVROOT}/logs/modsec_audit.log"
+#SecDefaultAction "deny,phase:2,status:403"
+#SecRule ARGS "\.\./" "t:normalizePathWin,id:50904,severity:4,t:none,t:urlDecodeUni,t:htmlEntityDecode,t:lowercase,msg:'Drive Access'" 
+
+<LocationMatch "^/testingRateLimit">
+
+# Initialize user tracking
+SecRule REQUEST_HEADERS:X-Forwarded-For "@unconditionalMatch" "phase:2,initcol:ip=%{MATCHED_VAR}_login,pass,log,id:101"
+SecRule REQUEST_HEADERS:X-Forwarded-For "@unconditionalMatch" "phase:2,initcol:global=global_login,pass,log,id:401"
+
+SecRule IP:LOGIN_ACCESS_COUNT "@ge 0" "phase:2,pass,log,msg:'Login access count is %{ip.login_access_count}',id:102"
+SecRule GLOBAL:LOGIN_ACCESS_COUNT "@ge 0" "phase:2,pass,log,msg:'Global login access count is %{global.login_access_count}',id:402"
+
+# Increment counter
+SecAction "phase:2,setvar:ip.login_access_count=+1,pass,log,id:103"
+SecAction "phase:2,setvar:global.login_access_count=+1,pass,log,id:403"
+
+# Block and log requests if count > 600 and delay for 10 seconds, 1 count per request.
+SecRule IP:LOGIN_ACCESS_COUNT "@gt 600" "phase:2,pause:10,deny,status:429,setenv:RATELIMITED_IP,log,id:104"
+SecRule GLOBAL:LOGIN_ACCESS_COUNT "@gt 3600" "phase:2,pause:60,deny,status:429,setenv:RATELIMITED_GLOBAL,log,id:404"
+
+# Decay the count over time
+SecAction "phase:5,deprecatevar:ip.login_access_count=600/10,pass,log,id:105"
+SecAction "phase:5,deprecatevar:global.login_access_count=3600/60,pass,log,id:405"
+
+</LocationMatch>
+
 
 <VirtualHost *:10043>
-	# strange rules of VirtualHost + Server name
+	# strange rules of VirtualHost + Server nameemr 
 	# https://serverfault.com/questions/520195/how-does-servername-and-serveralias-work
-	# look into Host header in HTTP requet to match 
+	# look into Host header in HTTP request to match 
     ServerName testing.mycompany.com
     ServerAlias testing.mycompany.com app.mycompany.com
 	
     # ...other configuration directives for this host...
-	# preconidition : LoadModule ssl_module modules/mod_ssl.so, needed for using HTTPS
+	# preconidition : LoadModule ssl_module modules/mod_ssl.so
 	SSLEngine on
 	# can add full cert chain here for SSLCertificateFile *
 	# SSLCACertificateFile is only for client authentication
@@ -299,7 +404,6 @@ SSLRandomSeed connect builtin
 	# any 404 be redirected to /missing.html
 	ErrorDocument 404 /missing.html
 	
-	# denote the "/" path
 	DocumentRoot "${SRVROOT}/htdocs"
 	<Directory "${SRVROOT}/htdocs">
     
@@ -307,6 +411,17 @@ SSLRandomSeed connect builtin
     AllowOverride None
     Require all granted
 	</Directory>
+	
+	RewriteEngine On
+	#LogLevel warn rewrite:trace3
 
+# Folllowing is the maintenance page setup : which blocks public access but allow certain IPs' access for verification during 
+# testing and upgrade 
+# Without first RewriteCond -> It will cause inifinite 302 
+RewriteCond %{REQUEST_URI} !^/maintenance.html$
+RewriteCond %{HTTP:X-Forwarded-For} !(^59\.148\.57\.138|^59\.154\.22\.11)$ [NC]
+RewriteRule ^.*$ "/maintenance.html" [L,R=302]
+
+	
 </VirtualHost>
 
